cumpleaños avance app

--- a/Cumpleaños/Registro/templates/Registro/registro.html
+++ b/Cumpleaños/Registro/templates/Registro/registro.html
@@ -28,7 +28,7 @@
 
     <script>
         // Set the date we're counting down to
-        const countDownDate = new Date('August 30, 2024 00:00:00').getTime();
+        const countDownDate = new Date('September 20, 2024 00:00:00').getTime();
 
         // Update the countdown every 1 second
         const x = setInterval(function() {
@@ -66,9 +66,9 @@
 
     <h1>Dirección</h1>
         <body>
-            <img class="responsive-image" src="{% static 'Registro/img/mapa.png' %}" alt="Descripción de la imagen">
+            <img class="responsive-image" src="{% static 'Registro/img/mapa_.png' %}" alt="Descripción de la imagen">
             <div class="body-center">
-                <p><a href="https://maps.app.goo.gl/MLwrd6yaMU3pWGQJ9" target="_blank">Abrir en Google Maps</a></p>
+                <p><a href="https://maps.app.goo.gl/5tMT9ofJWXEE9RCV7" target="_blank">Abrir en Google Maps</a></p>
             </div>
         </body>
 
@@ -84,9 +84,16 @@
     <h1>Música</h1>
         <body>
             <div class="body-center">
-                <p><a href="https://open.spotify.com/playlist/5QbAA3XNyg10BZ9O6ZUXhX?si=4992d131f84744d2" target="_blank" style="color: #1DB954;">Spotify Playlist</a></p>
+                <p><a href="https://open.spotify.com/playlist/10A3FdLk1kKBzw6aqf8M5Z?si=166d0df01c1645c5" target="_blank" style="color: #1DB954;">Spotify Playlist</a></p>
             </div>
         </body>
 
+    <h1>Fotos</h1>
+        <body>
+            <div class="body-center">
+                <p><a href="https://apps.apple.com/app/id660256196" target="_blank" style="color: #1DB954;">Iphone App</a></p>
+                <p><a href="https://apps.apple.com/app/id660256196" target="_blank" style="color: #1DB954;">Android App</a></p>
+            </div>
+        </body>
 
     {% endblock %}
