--- a/Cumpleaños/Registro/templates/Registro/registro.html
+++ b/Cumpleaños/Registro/templates/Registro/registro.html
@@ -2,10 +2,10 @@
 
 {% block title%}Home{%endblock%}
 
-{%block background%}{%load static%}{% static 'Registro/img/home-bg.jpg' %}{%endblock%}
+{%block background%}{%load static%}{% static 'Registro/img/home-bg.jpeg' %}{%endblock%}
 
 {%block headers%}
-<h1>Cumpleaños</h1>
+<h1>Viernes 20-9 21:00</h1>
 <body>
     <div id="countdown" style="display: flex; justify-content: center; align-items: center; gap: 20px;">
         <div>
@@ -65,14 +65,18 @@
 {% block content %}
 
     <h1>Cómo llegar</h1>
-        <body>
-            <img class="responsive-image" src="{% static 'Registro/img/mapa_.png' %}" alt="Descripción de la imagen">
-            <div class="body-center">
-                <p><a href="https://maps.app.goo.gl/5tMT9ofJWXEE9RCV7" target="_blank">Abrir en Google Maps</a></p>
-            </div>
-        </body>
-        <br> </br>
-    <h1>Apuntate!</h1>
+    <body>
+        <img class="responsive-image" src="{% static 'Registro/img/mapa_.png' %}" alt="Descripción de la imagen">
+        <div class="body-center">
+            <p><a href="https://maps.app.goo.gl/5tMT9ofJWXEE9RCV7" target="_blank">Abrir en Google Maps</a></p>
+        </div>
+        <div class="body-center">
+            <p>25 de Mayo, 558 (entre Jujuy y Salta) Dique Luján, Tigre</p>
+        </div>
+    </body>
+
+    <br> </br>
+    <h1>Confirmar asistencia</h1>
         <body>
             <form method="post" enctype="multipart/form-data">  <!-- Añade enctype -->
                 {% csrf_token %}
@@ -88,4 +92,16 @@
     <h1><a href="https://www.wedshoots.com/" target="_blank" style="color: #E1306C; text-decoration: none;">Descarga la App de fotos</a></h1>
     <br> </br>
 
+    <h1>Dress-Code</h1>
+        <ul>
+            <li>Elegante Sport</li>
+            <li>Black & White</li>
+        </ul>
+      
+    <h1>Tips y Notas</h1>
+        <ul>
+            <li>Hay cesped, traete calzado cómodo!</li>
+            <li>Hay piscina, traete bañador!</li>
+        </ul>
+      
     {% endblock %}
