--- a/Cumpleaños/Registro/templates/Registro/registro.html
+++ b/Cumpleaños/Registro/templates/Registro/registro.html
@@ -5,7 +5,7 @@
 {%block background%}{%load static%}{% static 'Registro/img/home-bg.jpeg' %}{%endblock%}
 
 {%block headers%}
-<h1>Viernes 20-9 21:00</h1>
+<h1>Viernes 20-9 21:00hs</h1>
 <body>
     <div id="countdown" style="display: flex; justify-content: center; align-items: center; gap: 20px;">
         <div>
@@ -86,22 +86,30 @@
         </body>
     <br> </br>
 
-    <h1><a href="https://open.spotify.com/playlist/10A3FdLk1kKBzw6aqf8M5Z?si=166d0df01c1645c5" target="_blank" style="color: #1DB954; text-decoration: none;">Añade a la Playlist</a></h1>
-    <br> </br>
+    <div class="body-center">
+        <h1>Dress-Code</h1>
+            <ul>
+                <li>Black & White (Obligatorio)</li>
+                <li>Elegante Sport</li>
+            </ul>
+    </div>
 
-    <h1><a href="https://www.wedshoots.com/" target="_blank" style="color: #E1306C; text-decoration: none;">Descarga la App de fotos</a></h1>
-    <br> </br>
+    <div class="body-center">
+        <h1><a href="https://photos.app.goo.gl/tKEn9ex7XYni7amM6" target="_blank" style="color: #E1306C; text-decoration: none;">Sube aquí las fotos de la fiesta</a></h1>
+    </div>
 
-    <h1>Dress-Code</h1>
-        <ul>
-            <li>Elegante Sport</li>
-            <li>Black & White</li>
-        </ul>
-      
-    <h1>Tips y Notas</h1>
-        <ul>
-            <li>Hay cesped, traete calzado cómodo!</li>
-            <li>Hay piscina, traete bañador!</li>
-        </ul>
+    <div class="body-center">
+        <h1><a href="https://open.spotify.com/playlist/10A3FdLk1kKBzw6aqf8M5Z?si=166d0df01c1645c5" target="_blank" style="color: #1DB954; text-decoration: none;">Añadí música a la Playlist</a></h1>
+        <br> </br>
+    </div>
+
+    <div class="body-center">
+        <h1>Tips y Notas</h1>
+            <ul>
+                <li>Hay pasto, traete calzado cómodo!</li>
+                <li>Hay pileta, podes traer bañador!</li>
+            </ul>
+    </div>
+
       
     {% endblock %}
